--- a/flexbox/style.css
+++ b/flexbox/style.css
@@ -1,3 +1,8 @@
+:root {
+    --default-font-size: 1.6rem;
+
+}
+
 * {
     /* default font */
     font-family: museo-sans-rounded, sans-serif;
@@ -12,17 +17,111 @@
     box-sizing: border-box;
 }
 
+body {
+    /* centering the card in the viewport */
+    height: 100vh;
+    min-height: 66.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .card {
     /* mimics a quartet card game card size */
-    width: 430px;
-    height: 665px;
+    width: 43rem;
+    height: 66.5rem;
+    padding: 1.3rem;
 
-    /* centering it */
-    margin: 10px auto;
-
-    /* background-color just here to make the card visible, can be changed */
-    background-image: radial-gradient(circle, #4a8de5 3em, #d9e5fa, #754fef, #efab83);
+    /* background-color with animation parameters */
+    background: radial-gradient(circle at 4% 2%, #4a8de5 2%, #175dd6 8%, #754fef 25%, #efab83 40%);
+    background-size: 300% 300%;
+    animation-name: color-fade;
+    animation-duration: 30s;
+    animation-iteration-count: infinite;
 
     /* makes the appearance look more like a card, up to you to change */
-    border-radius: 14px;
+    border-radius: 1.3rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* background animation */
+@keyframes color-fade {
+    0% {
+        background-position: 0% 0%;
+    }
+
+    50% {
+        background-position: 25% 25%;
+    }
+
+    100% {
+        background-position: 0% 0%;
+    }
+}
+
+.header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    margin-bottom: 3rem;
+}
+
+.header .description {
+    font-weight: 700;
+    font-size: var(--default-font-size);
+}
+
+.header .rating {
+    font-size: var(--default-font-size);
+}
+
+.image-container {
+    width: 56%;
+    height: 34.6rem;
+    padding: 1rem;
+    margin-bottom: 3rem;
+    border: 0.2rem solid #754fef;
+}
+
+.image-container:hover {
+    background-image: linear-gradient(#5663B0, #452e8f);
+    box-shadow: 0.3em 0.5em 1em #452e8f;
+}
+
+.title-image {
+    max-width: 100%;
+    box-shadow: inset 0.1em 0.15em 0.5em #401f9c;
+}
+
+.main-description {
+    width: 80%;
+    font-size: var(--default-font-size);
+    text-align: justify;
+    margin-bottom: 2rem;
+}
+
+.stats-container {
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+
+.stat-field {
+    margin-bottom: 0.9rem;
+}
+
+.stat-field p {
+    padding-bottom: 0.1rem;
+    border-bottom: 0.1rem solid black;
+    margin-bottom: 0.3rem;
+}
+
+.stat {
+    font-size: var(--default-font-size);
 }
