initial javasscript + supporting html, css

--- a/javascript/style.css
+++ b/javascript/style.css
@@ -80,7 +80,7 @@ body {
 }
 
 .image-container {
-    width: 56%;
+    width: 50%;
     height: 34.6rem;
     padding: 1rem;
     margin-bottom: 3rem;
@@ -94,6 +94,13 @@ body {
 
 .title-image {
     max-width: 100%;
+    background-image: url("./assets/cat.png");
+    box-shadow: inset 0.1em 0.15em 0.5em #401f9c;
+}
+
+.title-image .win{
+    max-width: 100%;
+    background-image: url("./assets/win.jpg");
     box-shadow: inset 0.1em 0.15em 0.5em #401f9c;
 }
 
@@ -112,8 +119,56 @@ body {
 
 }
 
+.stats-left {
+    max-width: 19%;
+}
+
+.stats-middle {
+    max-width: 32%;
+}
+
+.stats-right {
+    max-width: 11%;
+}
+
 .stat-field {
     margin-bottom: 0.9rem;
+}
+
+.stat-field input {
+    margin-top: 0.2em;
+    width: 100%;
+}
+
+input[type=range] {
+    width: 100%;
+    background: transparent;
+}
+
+input[type=range]::-moz-range-track {
+    background-color: #b29ee9;
+}
+
+input[type=range]::-moz-range-thumb {
+    height: 1em;
+    width: 0.6em;
+    background: #ffacac;
+    border-radius: 0.2em;
+    border: 0.02em solid #a10a0a;
+    box-shadow: 0 0.1em 0.5em 0 #f35e44;
+}
+
+input[type=range]:disabled::-moz-range-thumb {
+    height: 1em;
+    width: 0.6em;
+    background: #a7a7a7;
+    border-radius: 0.2em;
+    border: 0.02em solid #2e2e2e;
+    box-shadow: 0 0.01em 0.1em 0 #161616;
+}
+
+input[type=range]::-moz-range-progress {
+    background-color: #401f9c;
 }
 
 .stat-field p {
